---------------------------------------------------------------------------------------------------
Version: 1.0.9
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 1.0.8
Date: 2021-10-03
  Bugfixes:
    - Fix crash when right-clicking an item selector in the settings menu
---------------------------------------------------------------------------------------------------
Version: 1.0.7
Date: 2021-08-29
  Features:
    - Add preset addon for Bio Industries (Thanks to snouz!)
    - Add preset addon for Omnienergy and Omniscience (Thanks to NihlisticPandemonium!)
  Bugfixes:
    - Fix crash that could occur in some cases in multiplayer
---------------------------------------------------------------------------------------------------
Version: 1.0.6
Date: 2021-08-03
  Bugfixes:
    - Fix another crash when loading from old version (oops!)
---------------------------------------------------------------------------------------------------
Version: 1.0.5
Date: 2021-08-01
  Bugfixes:
    - Fix crash when loading from old version
---------------------------------------------------------------------------------------------------
Version: 1.0.4
Date: 2021-08-01
  Features:
    - Add settings import/export. Useful if you want to mass-edit your milestones in a text editor, or quickly import something from another save.
    - Add preset addons: Small mods that can be used with any other major mod can now have preset milestones, which will be detected and added at the end of the major mod preset.
    - Add preset addons: Power Armor Mk3, Space Extension (SpaceX)
  Changes:
    - Add missing holmium ingot to SE preset
---------------------------------------------------------------------------------------------------
Version: 1.0.3
Date: 2021-06-27
  Bugfixes:
    - Fix multiplayer desync when a player joins before Milestones' intro message